# OrgManager

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs  user.rs
src/domain/entities/: employee.rs  mod.rs  user.rs
src/interfaces/: mod.rs
src/interfaces/dtos/: employee_dto.rs  mod.rs  user_dto.rs
src/interfaces/http/: mod.rs  state.rs
src/interfaces/http/handlers/: mod.rs  user_handler.rs
src/interfaces/http/handlers/hello_handler/: hello.rs
src/interfaces/http/routes/: hello_routes.rs  mod.rs  user_routes.rs
