[package]
name = "org-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
hyper = "1.5.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
time = { version = "0.3.37", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1.42.0", features = ["full"] }
tower = { version = "0.5.2", features = ["tokio", "tokio-stream", "tokio-util"] }
uuid = { version = "1.11.0", features = ["serde", "v7"] }
